crates/musli-tests/tests/ui/combine_packed_transparent_error.stderr
error: #[musli] multiple packing attributes specified
 --> tests/ui/combine_packed_transparent_error.rs:4:17
  |
4 | #[musli(packed, transparent)]
  |                 ^^^^^^^^^^^
